Use ImmutableMap.of instead of Map.of for reliable ordering